FreeST/test/Programs/InvalidTests/Linearity/LinMain/LinMain.fst
data T : 1T = C T

main : T
main = C main
